# functional-programming

./: .gitignore  README.md
pbA/: README.md  dune-project  pbA.ml
pbA/lib/: dune
pbA/test/: dune
pbB/: README.md  dune-project  input  pbB.ml
pbB/lib/: dune
pbB/test/: dune
pbC/: README.md  dune-project  input  pbC.ml
pbC/lib/: dune
pbC/test/: dune
