(lang dune 3.11)

(name pbA)

(generate_opam_files false)

(source
 (github joelvaz0x01/functional-programming))

(authors "Joel Vaz")

(maintainers "Joel Vaz")

(license Apache-2.0)

(package
 (name pbA)
 (synopsis "See to believe")
 (description "Calculation of the Schröder sequence with and without memoization.")
 (depends ocaml dune zarith))
