(lang dune 3.11)

(name pbB)

(generate_opam_files false)

(source
 (github joelvaz0x01/functional-programming))

(authors "Joel Vaz")

(maintainers "Joel Vaz")

(license Apache-2.0)

(package
 (name pbB)
 (synopsis "Common mutation")
 (description "Verifies if the common mutation exists in binary trees with given values and returns in what node it exists.")
 (depends ocaml dune))
