(lang dune 3.11)

(name pbC)

(generate_opam_files false)

(source
 (github joelvaz0x01/functional-programming))

(authors "Joel Vaz")

(maintainers "Joel Vaz")

(license Apache-2.0)

(package
 (name pbC)
 (synopsis "The Futoshiki Game")
 (description "Solve Futoshiki puzzles using the the backtracking algorithm.")
 (depends ocaml dune))
